mool/tests/compile/fail/unsupported_postgres_array.rs
fn main() {
    let _ = mool::funcs::array::value(vec![1_i64]);
}
